k8s/05-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-dashboard
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-dashboard
  template:
    metadata:
      labels:
        app: banking-dashboard
    spec:
      tolerations:
      - key: "database-only"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - high-memory
      containers:
      - name: banking-dashboard
        image: kareemabdulhameed/banking-dashboard:v1.0
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 30
        securityContext:
          runAsUser: 101
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
        volumeMounts:
        - name: cache
          mountPath: /var/cache/nginx
        - name: run
          mountPath: /var/run
      volumes:
      - name: cache
        emptyDir: {}
      - name: run
        emptyDir: {}
