k8s/10-networkpolicy.yaml
# 1. Deny all traffic بالـ default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: banking
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# 2. السماح للـ API تتصل بالـ Database
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-db
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: postgres-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: banking-api
    ports:
    - port: 5432
---
# 3. السماح للـ Ingress يوصل للـ API
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-api
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - port: 3000
---
# 4. السماح للـ Ingress يوصل للـ Dashboard
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-dashboard
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-dashboard
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - port: 80
---
# 5. السماح للـ API تتصل بالإنترنت (DNS)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-api
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres-db
    ports:
    - port: 5432
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
# 6. السماح للـ Dashboard egress للـ DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dashboard-egress
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-dashboard
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
# 7. السماح للـ DB egress للـ DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-egress
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: postgres-db
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
